<resources>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>

    <!-- Grid 32/12  8col percent  -->
    <string name="g0_g32_12_8c" translatable="false">"0"</string>
    <string name="g1_g32_12_8c" translatable="false">"0.033"</string>
    <string name="c1_g32_12_8c" translatable="false">"0.121"</string>
    <string name="g2_g32_12_8c" translatable="false">"0.154"</string>
    <string name="c2_g32_12_8c" translatable="false">"0.242"</string>
    <string name="g3_g32_12_8c" translatable="false">"0.275"</string>
    <string name="c3_g32_12_8c" translatable="false">"0.363"</string>
    <string name="g4_g32_12_8c" translatable="false">"0.396"</string>
    <string name="c4_g32_12_8c" translatable="false">"0.484"</string>
    <string name="g5_g32_12_8c" translatable="false">"0.516"</string>
    <string name="c5_g32_12_8c" translatable="false">"0.604"</string>
    <string name="g6_g32_12_8c" translatable="false">"0.637"</string>
    <string name="c6_g32_12_8c" translatable="false">"0.725"</string>
    <string name="g7_g32_12_8c" translatable="false">"0.758"</string>
    <string name="c7_g32_12_8c" translatable="false">"0.846"</string>
    <string name="g8_g32_12_8c" translatable="false">"0.879"</string>
    <string name="c8_g32_12_8c" translatable="false">"0.967"</string>
    <string name="g9_g32_12_8c" translatable="false">"1"</string>
    <!-- Grid 32/12  8col percent  -->


    <!-- Grid 32/12  6col percent  -->
    <string name="g0_g32_12_6c" translatable="false">"0"</string>
    <string name="g1_g32_12_6c" translatable="false">"0.04"</string>
    <string name="c1_g32_12_6c" translatable="false">"0.16"</string>
    <string name="g2_g32_12_6c" translatable="false">"0.2"</string>
    <string name="c2_g32_12_6c" translatable="false">"0.32"</string>
    <string name="g3_g32_12_6c" translatable="false">"0.36"</string>
    <string name="c3_g32_12_6c" translatable="false">"0.48"</string>
    <string name="g4_g32_12_6c" translatable="false">"0.52"</string>
    <string name="c4_g32_12_6c" translatable="false">"0.64"</string>
    <string name="g5_g32_12_6c" translatable="false">"0.68"</string>
    <string name="c5_g32_12_6c" translatable="false">"0.8"</string>
    <string name="g6_g32_12_6c" translatable="false">"0.84"</string>
    <string name="c6_g32_12_6c" translatable="false">"0.96"</string>
    <string name="g7_g32_12_6c" translatable="false">"1"</string>

    <!-- Grid 32/12  8col percent  -->

    <!-- Grid 32/12  8col 18 row percent  -->
    <string name="gr0_g32_12_8c18r" translatable="false">"0"</string>
    <string name="gr1_g32_12_8c18r" translatable="false">"0.016"</string>
    <string name="cr1_g32_12_8c18r" translatable="false">"0.056"</string>
    <string name="gr2_g32_12_8c18r" translatable="false">"0.071"</string>
    <string name="cr2_g32_12_8c18r" translatable="false">"0.11"</string>
    <string name="gr3_g32_12_8c18r" translatable="false">"0.125"</string>
    <string name="cr3_g32_12_8c18r" translatable="false">"0.165"</string>
    <string name="gr4_g32_12_8c18r" translatable="false">"0.18"</string>
    <string name="cr4_g32_12_8c18r" translatable="false">"0.219"</string>
    <string name="gr5_g32_12_8c18r" translatable="false">"0.234"</string>
    <string name="cr5_g32_12_8c18r" translatable="false">"0.274"</string>
    <string name="gr6_g32_12_8c18r" translatable="false">"0.289"</string>
    <string name="cr6_g32_12_8c18r" translatable="false">"0.328"</string>
    <string name="gr7_g32_12_8c18r" translatable="false">"0.343"</string>
    <string name="cr7_g32_12_8c18r" translatable="false">"0.383"</string>
    <string name="gr8_g32_12_8c18r" translatable="false">"0.398"</string>
    <string name="cr8_g32_12_8c18r" translatable="false">"0.437"</string>
    <string name="gr9_g32_12_8c18r" translatable="false">"0.452"</string>
    <string name="cr9_g32_12_8c18r" translatable="false">"0.492"</string>
    <string name="gr10_g32_12_8c18r" translatable="false">"0.507"</string>
    <string name="cr10_g32_12_8c18r" translatable="false">"0.547"</string>
    <string name="gr11_g32_12_8c18r" translatable="false">"0.561"</string>
    <string name="cr11_g32_12_8c18r" translatable="false">"0.601"</string>
    <string name="gr12_g32_12_8c18r" translatable="false">"0.616"</string>
    <string name="cr12_g32_12_8c18r" translatable="false">"0.656"</string>
    <string name="gr13_g32_12_8c18r" translatable="false">"0.670"</string>
    <string name="cr13_g32_12_8c18r" translatable="false">"0.710"</string>
    <string name="gr14_g32_12_8c18r" translatable="false">"0.725"</string>
    <string name="cr14_g32_12_8c18r" translatable="false">"0.765"</string>
    <string name="gr15_g32_12_8c18r" translatable="false">"0.779"</string>
    <string name="cr15_g32_12_8c18r" translatable="false">"0.819"</string>
    <string name="gr16_g32_12_8c18r" translatable="false">"0.834"</string>
    <string name="cr16_g32_12_8c18r" translatable="false">"0.874"</string>
    <string name="gr17_g32_12_8c18r" translatable="false">"0.888"</string>
    <string name="cr17_g32_12_8c18r" translatable="false">"0.928"</string>
    <string name="gr18_g32_12_8c18r" translatable="false">"0.943"</string>
    <string name="cr18_g32_12_8c18r" translatable="false">"0.983"</string>
    <string name="gr19_g32_12_8c18r" translatable="false">"0.998"</string>
    <string name="cr20_g32_12_8c18r" translatable="false">"1"</string>

    <!-- Grid 32/12  8col 18 row percent  -->
    <!-- col -->
    <string name="gc0_g32_12_8c18r" translatable="false">"0"</string>
    <string name="gc1_g32_12_8c18r" translatable="false">"0.056"</string>
    <string name="cc1_g32_12_8c18r" translatable="false">"0.085"</string>
    <string name="gc2_g32_12_8c18r" translatable="false">"0.163"</string>
    <string name="cc2_g32_12_8c18r" translatable="false">"0.192"</string>
    <string name="gc3_g32_12_8c18r" translatable="false">"0.27"</string>
    <string name="cc3_g32_12_8c18r" translatable="false">"0.299"</string>
    <string name="gc4_g32_12_8c18r" translatable="false">"0.377"</string>
    <string name="cc4_g32_12_8c18r" translatable="false">"0.406"</string>
    <string name="gc5_g32_12_8c18r" translatable="false">"0.484"</string>
    <string name="cc5_g32_12_8c18r" translatable="false">"0.513"</string>
    <string name="gc6_g32_12_8c18r" translatable="false">"0.591"</string>
    <string name="cc6_g32_12_8c18r" translatable="false">"0.62"</string>
    <string name="gc7_g32_12_8c18r" translatable="false">"0.698"</string>
    <string name="cc7_g32_12_8c18r" translatable="false">"0.727"</string>
    <string name="gc8_g32_12_8c18r" translatable="false">"0.805"</string>
    <string name="cc8_g32_12_8c18r" translatable="false">"0.835"</string>
    <string name="gc9_g32_12_8c18r" translatable="false">"0.912"</string>
    <string name="cc9_g32_12_8c18r" translatable="false">"0.942"</string>
    <string name="gc10_g32_12_8c18r" translatable="false">"1"</string>
    <!-- Grid 32/12  8col 18 row percent  -->

    <string name="night">night</string>
    <string name="day">day</string>
    <string name="app_name">home5</string>
    <string name="theme_title" translatable="false">Themes:</string>
    <string name="light_theme" translatable="false">Dark theme</string>
    <string name="dark_theme" translatable="false">Light theme</string>
    <string name="system_theme" translatable="false">Use system theme</string>
    <string name="battery_saver_theme" translatable="false">Battery saver theme</string>
    <string name="home2">home5</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="web_adr"><a href="https://rabota.by/applicant/resumes/view?resume=4cf8a2eaff039481ab0039ed1f304850745475">https://rabota.by</a></string>


</resources>



